--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "a library of React component",
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server --progress --colors --open --mode=development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,10 +19,24 @@
   },
   "homepage": "https://github.com/wuzhengyan2015/rfox#readme",
   "dependencies": {
+    "@types/react": "^16.4.18",
+    "@types/react-dom": "^16.0.9",
     "classnames": "^2.2.6",
-    "typescript": "^3.1.3"
+    "react": "^16.6.1",
+    "react-dom": "^16.6.1"
   },
   "devDependencies": {
-    "awesome-typescript-loader": "^5.2.1"
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.0.0",
+    "babel-loader": "^8.0.4",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10",
+    "typescript": "^3.1.3"
   }
 }
