--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --progress --colors --open --mode=development",
-    "test": "jest"
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -19,9 +19,20 @@
   },
   "homepage": "https://github.com/wuzhengyan2015/rfox#readme",
   "jest": {
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
     "moduleNameMapper": {
-      "\\.(css|less)$": "identity-obj-proxy"
-    }
+      "\\.(css|scss)$": "identity-obj-proxy"
+    },
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testMatch": [
+      "<rootDir>/**/?(*.)(spec|test).ts?(x)"
+    ]
   },
   "dependencies": {
     "@types/react": "^16.4.18",
@@ -38,14 +49,21 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.0.0",
     "babel-loader": "^8.0.4",
+    "@types/enzyme": "^3.1.15",
+    "@types/jest": "^23.3.10",
+    "babel-jest": "^23.6.0",
     "css-loader": "^1.0.1",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.7.0",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
     "node-sass": "^4.10.0",
+    "react-addons-test-utils": "^15.6.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "ts-jest": "^23.10.5",
     "tslint": "^5.11.0",
     "tslint-loader": "^3.5.4",
     "typescript": "^3.1.3",
