--- a/package.json
+++ b/package.json
@@ -49,13 +49,14 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.0.0",
-    "babel-loader": "^8.0.4",
     "@types/enzyme": "^3.1.15",
     "@types/jest": "^23.3.10",
     "babel-jest": "^23.6.0",
+    "babel-loader": "^8.0.4",
     "css-loader": "^1.0.1",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
+    "enzyme-to-json": "^3.3.5",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
