--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
     "classnames": "^2.2.6",
+    "kinetic": "^5.2.0",
     "react": "^16.6.1",
     "react-dom": "^16.6.1"
   },
