--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "rfox",
-  "version": "0.0.1",
+  "name": "rfox-ui",
+  "version": "0.0.5",
   "description": "a library of React component",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --progress --colors --open --mode=development",
+    "build": "webpack --mode=production",
     "test": "jest --coverage",
     "check-types": "tsc"
   },
@@ -33,7 +34,8 @@
     },
     "testMatch": [
       "<rootDir>/**/?(*.)(spec|test).ts?(x)"
-    ]
+    ],
+    "setupFiles": ["jest-canvas-mock"]
   },
   "dependencies": {
     "@types/react": "^16.4.18",
@@ -62,6 +64,7 @@
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
+    "jest-canvas-mock": "^2.0.0-alpha.1",
     "node-sass": "^4.10.0",
     "react-addons-test-utils": "^15.6.2",
     "sass-loader": "^7.1.0",
