--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "rfox-ui",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "a library of React component",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --progress --colors --open --mode=development",
-    "build": "webpack --mode=production",
+    "build": "webpack --config=webpack.prod.config.js",
     "test": "jest --coverage",
     "check-types": "tsc"
   },
@@ -35,7 +35,9 @@
     "testMatch": [
       "<rootDir>/**/?(*.)(spec|test).ts?(x)"
     ],
-    "setupFiles": ["jest-canvas-mock"]
+    "setupFiles": [
+      "jest-canvas-mock"
+    ]
   },
   "dependencies": {
     "@types/react": "^16.4.18",
@@ -56,6 +58,7 @@
     "@types/jest": "^23.3.10",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
+    "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^1.0.1",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
